# ECO

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
TwTrip/: manage.py
TwTrip/TwTrip/: asgi.py  settings.py  urls.py  wsgi.py
TwTrip/src/: manage.py
TwTrip/src/TwTrip/: asgi.py  settings.py  urls.py  wsgi.py
TwTrip/src/geoinfo/: apps.py
TwTrip/src/planner/: apps.py
eco/: manage.py
eco/eco/: settings.py
src/: import_food_bank_csv.py  import_food_table_csv.py  import_organization_csv.py
src/Board/: admin.py  apps.py  forms.py  models.py  schema.py
src/Board/migrations/: 0001_initial.py  0002_alter_board_fb_id_alter_board_leftover_item_and_more.py  0003_alter_board_fb_id_alter_board_leftover_item_and_more.py  0004_alter_board_user_id.py  0005_alter_board_user_id.py  0006_alter_board_user_id.py  0007_alter_board_fb_id_alter_board_leftover_item_and_more.py  0008_remove_board_fb_id_remove_board_leftover_item_and_more.py  0009_alter_board_user_id.py  0010_board_fb_id_board_leftover_item_board_waste_item_and_more.py  0011_remove_board_user_id_board_user_alter_board_fb_id_and_more.py
src/Frontend/: apps.py  urls.py  views.py
src/Frontend/templates/: base.html  board.html  boarddetail.html  createboard.html  donation.html  foodbank.html  footprint.html  home.html  index.html  login.html  organization.html  organizations.html  (+4 more)
src/Organization/: admin.py  apps.py  models.py  schema.py
src/Report/: admin.py  apps.py  models.py  schema.py  views.py
src/Users/: admin.py  forms.py  schema.py
src/eco/: asgi.py  settings.py  urls.py  wsgi.py
src/res/: food_bank_data.csv  food_carbon_data.csv  welfare_organization_data.csv
(+30 files in other folders)
