[tool.poetry]
name = "ECO"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ECO", from=".."}]

[tool.poetry.dependencies]
python = "^3.10 ,<3.11"
pre-commit = "^3.7.0"
ruff = "^0.4.3"
django = "^5.0.6"
django-enumfields = "^2.1.1"
pandas = "^2.2.2"
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]
